// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconBox matches the snapshot for the amber tone 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FBEFD9",
        "borderRadius": 21,
        "flexShrink": 0,
        "height": 65,
        "justifyContent": "center",
        "width": 65,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={30}
      bbWidth={30}
      fill="none"
      focusable={false}
      height={30}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 30,
            "width": 30,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={30}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4289029646,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.8}
        >
          <RNSVGPath
            d="M10.5 3.5a5 5 0 0 1 7 7l-7 7a5 5 0 0 1-7-7z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
          <RNSVGPath
            d="m7 7 7 7"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</KeyboardProvider>
`;

exports[`IconBox matches the snapshot for the blue tone 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#DFE9F4",
        "borderRadius": 21,
        "flexShrink": 0,
        "height": 65,
        "justifyContent": "center",
        "width": 65,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={30}
      bbWidth={30}
      fill="none"
      focusable={false}
      height={30}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 30,
            "width": 30,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={30}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4282019493,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.8}
        >
          <RNSVGPath
            d="M10.5 3.5a5 5 0 0 1 7 7l-7 7a5 5 0 0 1-7-7z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
          <RNSVGPath
            d="m7 7 7 7"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</KeyboardProvider>
`;

exports[`IconBox matches the snapshot for the coral tone 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FBE3DB",
        "borderRadius": 21,
        "flexShrink": 0,
        "height": 65,
        "justifyContent": "center",
        "width": 65,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={30}
      bbWidth={30}
      fill="none"
      focusable={false}
      height={30}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 30,
            "width": 30,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={30}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293154606,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.8}
        >
          <RNSVGPath
            d="M10.5 3.5a5 5 0 0 1 7 7l-7 7a5 5 0 0 1-7-7z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
          <RNSVGPath
            d="m7 7 7 7"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</KeyboardProvider>
`;

exports[`IconBox matches the snapshot for the green tone 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#DCEBE6",
        "borderRadius": 21,
        "flexShrink": 0,
        "height": 65,
        "justifyContent": "center",
        "width": 65,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={30}
      bbWidth={30}
      fill="none"
      focusable={false}
      height={30}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 30,
            "width": 30,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={30}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281302381,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.8}
        >
          <RNSVGPath
            d="M10.5 3.5a5 5 0 0 1 7 7l-7 7a5 5 0 0 1-7-7z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
          <RNSVGPath
            d="m7 7 7 7"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</KeyboardProvider>
`;
